# satsbolt

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  flutter-ci.yml  mobile.yml  rust-ci.yml
apps/landing/: package-lock.json  package.json
backend/: Cargo.toml
backend/.sqlx/: query-03cb72fa75852fe24bb47c27408eebe6bbc9827c8bf6250c4b65eb5cfd72cb07.json  query-0e7aadce6bf1a1931ed773726921875568c17973572e5a52fe886816ce86cad5.json  query-1b888ce82cd921369081aeda970f7c05afd8c9f269a5a1c930afc0656ef59f22.json  query-201dada0d3884ce7e4848088066c71894d6fbfcdd34ba953cc75a6f7109a6530.json  query-220b00ebb1be1389c2d020251b9937b0a1a777e74ba6afceeb7d16c566683f1a.json  query-231085b4a6cecbbf079263feb910e95b178b83a2b03233902cf0826531cb464a.json  query-242e94b2693f5f4ccb52908ae4bb85ec827212a487a50d6ffef685399ae16deb.json  query-2754ae95618df40e74f80b48221334a415d821e1d663b7563bb602d4634b7cbe.json  query-29791fa4aa03fa09cb533b3710f96a44ba307113328dbea71c6230dcfea3efa1.json  query-2a321a65e338f170f6520a81384b7726af3c54360b17e4bfedd6c8f4da20c67a.json  query-2e85fbaeabd26292594f54e26fb0e42f9d94a05e344056fd4b5b256fca2ce263.json  query-3173b7547fd44c5363822fb2e22c5f7ae2433b47c92ea148146ae611ab6eb617.json  query-31a7cf2bfb81bdf94ecbecc6d28dd5cd09e0aa986e74de013345118d94df7908.json  query-327bbed6b67d801d8de7f59cadce4ad6d8f477b9c8f28e4dbbe21afcff7e0258.json  query-3664c0ffa315551eae30b04c7a8f3f59c44c20a65f3ad10e00f0de7af2eff67b.json  query-394bd024193e3baaba1e252820588da8bbfb43d5536c89b1acacf70d6012ff27.json  query-40b98476cc1bac095180144127295b4cb7b409737dde6f4c10efa8cf37bd8458.json  query-45773bc1f223ee1952d0ee55472b1957370491ed8a1e14a9ca65449433559a60.json  query-4f058ebfd1ae7a5edf219085e397b925876498f26267f67e9b393aa56fde1ec9.json  query-56188db038fe9cf4082795dc1a989c387203ced1170a4b35fed82b30bdd67ce5.json  query-56d415cbf336091ae70788b898e0b5e4e0b8e89a3cd817634ba1dc866ecab58d.json  query-634cf9604f3af45c4e44fce2483aa79bbe4ff8792fdbedeae55e22579ef88fac.json  query-6c78191b6471d383442b71ed2bcb9336ab09737365a223c989deb95eb5e0e701.json  query-6e851f2de5ced79e502b673abbd238c1d560e91d1f658cb356c250444ea50a1f.json  query-70097c149d4ea4fdd9a1b388a7fe3fbf63c5d7ecc1063088d783e502b3c8b767.json  query-80f5d2cdbe628a309c62df17f4dc9076d9db98a644f121fcc1f1b19405c2d3a6.json  query-8671d4ba4b8aeb13928c877f047acc2fd4c8cdfa51fd3696b3c7c6ab6244ca47.json  query-9b1160f4411933903eb3c509d334e1aad770535ac9e7285f6e4dc8126a6e4e6d.json  query-9e21b834710475638cccb2f042f1d7ce61d0a1347bc7bea6f1ff777d6f24181b.json  (+22 more)
backend/crates/core-ledger/: Cargo.toml
backend/crates/core-ledger/src/: errors.rs  ledger.rs  lib.rs  models.rs
backend/crates/core-ledger/tests/: ledger_integration.rs
backend/crates/offramp-swap/: Cargo.toml
backend/crates/offramp-swap/src/: bitnob.rs  lib.rs
backend/services/api-server/: Cargo.toml
backend/services/api-server/src/: auth.rs  lib.rs  main.rs
backend/services/api-server/src/handlers/: auth.rs  ledger.rs  merchant.rs  mod.rs  payments.rs
backend/services/api-server/tests/: api_functional.rs
backend/services/lightning-node/: Cargo.toml
backend/services/lightning-node/src/: main.rs
docker/: Dockerfile.backend  docker-compose.yml
docs/: architecture.md  sprint0_alignment.md  srs.md
scripts/: .gitkeep
(+37 files in other folders)
