[package]
name = "offramp-swap"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }


