[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.30", features = ["full"] }
core-ledger = { path = "../../crates/core-ledger" }
ldk-engine = { path = "../../crates/ldk-engine" }
offramp-swap = { path = "../../crates/offramp-swap" }
reqwest = { version = "0.11", features = ["json"] }
lightning-invoice = "0.31"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }
jsonwebtoken = "9.0"
argon2 = "0.5"
dotenvy = "0.15"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
