[package]
name = "lightning-node"
version = "0.1.0"
edition = "2021"

[workspace]


[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["full"] }
ldk-node = "0.7.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
thiserror = "1.0"
